--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@kinde-oss/kinde-auth-nextjs": "^2.2.2",
     "@kinde-oss/kinde-nodejs-sdk": "^1.2.3",
     "@prisma/client": "^5.11.0",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^5.28.0",
@@ -21,11 +22,13 @@
     "@trpc/server": "^11.0.0-next-beta.318",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-loading-skeleton": "^3.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
