--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@kinde-oss/kinde-nodejs-sdk": "^1.2.3",
     "@prisma/client": "^5.11.0",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^5.28.0",
@@ -28,7 +29,9 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-loading-skeleton": "^3.4.0",
+    "react-pdf": "^7.7.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
